# lqr_track

./: CMakeLists.txt  README.md  package.xml
bagandshell/: 2024-02-07-09-15-35.bag  pubvirtualpose.sh
include/lqr_track/: LQR.h  Tool.h  trajectory.h
launch/: main.launch
rviz/: path_show.rviz  track.rviz  track_world.rviz
src/: LQR.cpp  LQR_node_world.cpp  Tool.cpp  trajectory.cpp
